# ptt

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/ptt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: LogUtils.h
app/src/main/cpp/include/opus/: opus_types.h
app/src/main/java/com/example/ptt/: AudioP.java  AudioR.java  IPlayCallback.java  MainActivity.java  Opus.java  Utils.java
app/src/main/res/drawable/: btbackgroud.xml  normal.xml  push.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ptt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
